# dependency-cache-visualizer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: DependencyCache.md
examples/: run_dev_example.py
frontend/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DependencyCacheVisualizer.jsx  NodeDetailsPanel.jsx  OperationsPanel.jsx  StatsPanel.jsx  TreeView.jsx
frontend/src/services/: api.js
src/dependency_cache_visualizer/: __init__.py
src/dependency_cache_visualizer/core/: __init__.py  cache.py  node.py  tree.py
src/dependency_cache_visualizer/path_utils/: __init__.py  builders.py
src/dependency_cache_visualizer/visualizer/: __init__.py  app.py  routes.py  schemas.py
src/dependency_cache_visualizer/visualizer/frontend_build/: index.html
src/dependency_cache_visualizer/visualizer/frontend_build/assets/: index-ETlECxwr.js  index-gejU8fU7.css
tests/: __init__.py  test_cache_logic.py  test_path_utils.py  test_visualizer_api.py
